--- a/infra/docker/Dockerfile.api
+++ b/infra/docker/Dockerfile.api
@@ -1,11 +1,31 @@
 # syntax=docker/dockerfile:1
-FROM python:3.11-slim AS base
+FROM python:3.11-slim
+
+# Set workdir at project root inside container
 WORKDIR /app
+
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1
-COPY apps/api/requirements.txt requirements.txt
+
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
+# Create non-root user early (least privilege)
+RUN groupadd -r appuser && useradd -r -g appuser appuser
+
+# Install dependencies first (better layer caching)
+COPY apps/api/requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
-COPY apps/api app
-WORKDIR /app/app
+
+# Copy only the application package (maintain single 'app' package path)
+COPY apps/api/app ./app
+
+RUN chown -R appuser:appuser /app
+USER appuser
+
 EXPOSE 8000
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
+# Important: reference full module path so relative imports (from .routers ...) work
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
