revamping the ui

--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,11 @@ REDIS_PORT=6379
 REDIS_URL=redis://redis:6379/0
 
 # Blockchain
-DOMA_TESTNET_CHAIN_ID=
-DOMA_TESTNET_RPC_URL_PRIMARY=
+DOMA_TESTNET_CHAIN_ID=97476
+DOMA_TESTNET_RPC_URL_PRIMARY=https://rpc-testnet.doma.xyz
+DOMA_TESTNET_API=https://api-testnet.doma.xyz
+DOMA_TESTNET_API_KEY=v1.your-api-key
+DOMA_TESTNET_SUBGRAPH_API=https://api-testnet.doma.xyz/graphql
 DOMA_TESTNET_RPC_URL_FALLBACK=
 
 # Auth (RS256). Provide base64-encoded PEMs
@@ -28,3 +31,15 @@ JWT_TTL_SECONDS=3600
 
 # External APIs
 ALCHEMY_API_KEY=
+
+# Doma Poll API
+DOMA_POLL_BASE_URL=
+DOMA_POLL_API_KEY=
+DOMA_ORDERBOOK_BASE_URL=
+DOMA_MARKETPLACE_BASE_URL=
+DOMA_SUBGRAPH_URL=
+VALUATION_MODEL_VERSION=v1.0
+NEXT_PUBLIC_ORDERBOOK_API_BASE=
+
+# Admin wallets (JSON array of addresses). Example: ["0xabc...","0xdef..."]
+ADMIN_WALLETS=[]
