--- a/apps/api/alembic.ini
+++ b/apps/api/alembic.ini
@@ -1,5 +1,5 @@
 [alembic]
-script_location = alembic
+script_location = %(here)s/alembic
 version_locations = alembic/versions
 prepend_sys_path = .
 file_template = %%(rev)s_%%(slug)s
