--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -1,12 +1,14 @@
-fastapi==0.111.1
-uvicorn[standard]==0.30.0
-pydantic==2.8.2
-pydantic-settings==2.3.4
-python-dotenv==1.0.1
-python-jose[cryptography]==3.3.0
-eth-account==0.11.3
-redis==5.0.7
-sqlalchemy==2.0.30
-psycopg2-binary==2.9.9
-alembic==1.13.1
-web3==6.17.0
+fastapi
+uvicorn
+pydantic
+pydantic-settings
+python-dotenv
+python-jose
+eth-account
+redis
+sqlalchemy
+psycopg2-binary
+alembic
+web3
+cryptography
+httpx
