--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@doma-protocol/orderbook-sdk": "^0.1.3",
     "@tanstack/react-query": "^5.17.15",
     "@wagmi/core": "^2.9.2",
     "autoprefixer": "^10.4.17",
