--- a/infra/docker/Dockerfile.api
+++ b/infra/docker/Dockerfile.api
@@ -18,6 +18,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy only the application package (maintain single 'app' package path)
 COPY apps/api/app ./app
+# Include Alembic migration assets
+COPY apps/api/alembic.ini ./alembic.ini
+COPY apps/api/alembic ./alembic
 
 RUN chown -R appuser:appuser /app
 USER appuser
@@ -27,5 +30,8 @@ EXPOSE 8000
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
-# Important: reference full module path so relative imports (from .routers ...) work
+# Copy entrypoint for migrations + app startup
+COPY infra/docker/entrypoint.api.sh /entrypoint.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
