update in progress

--- a/apps/api/pytest.ini
+++ b/apps/api/pytest.ini
@@ -2,3 +2,6 @@
 addopts = -q
 testpaths = tests
 pythonpath = app
+filterwarnings =
+	ignore::pydantic.PydanticDeprecatedSince20
+	ignore::DeprecationWarning:websockets.*
