--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start -p 3000",
-    "lint": "next lint"
+  "lint": "next lint",
+  "test": "jest --passWithNoTests"
   },
   "dependencies": {
     "@doma-protocol/orderbook-sdk": "^0.1.3",
@@ -29,6 +30,12 @@
     "@types/node": "20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+  "@types/jest": "^29.5.12",
+  "jest-environment-jsdom": "^29.7.0"
   }
 }
