updates made to the project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
     env_file: .env
     ports:
       - "${WEB_PORT:-3000}:3000"
-    depends_on:
-      - api
+    # depends_on:
+    #   - api
     networks:
       - domacross
     environment:
