--- a/infra/docker/Dockerfile.api
+++ b/infra/docker/Dockerfile.api
@@ -28,7 +28,7 @@ USER appuser
 EXPOSE 8000
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8000/health || exit 1
+    CMD curl -f https://8000-01k4gmg9q2k5psffk18y0q47h1.cloudspaces.litng.ai/health || exit 1
 
 # Copy entrypoint for migrations + app startup
 COPY infra/docker/entrypoint.api.sh /entrypoint.sh
