--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,36 +6,45 @@
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start -p 3000",
-  "lint": "next lint",
-  "test": "jest --passWithNoTests"
+    "lint": "next lint",
+    "test": "jest --passWithNoTests"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
+    "@apollo/experimental-nextjs-app-support": "^0.5.2",
     "@doma-protocol/orderbook-sdk": "^0.1.3",
-    "@tanstack/react-query": "^5.17.15",
-    "@wagmi/core": "^2.9.2",
+    "@rainbow-me/rainbowkit": "^2.1.7",
+    "@tanstack/react-query": "^5.59.20",
+    "@wagmi/connectors": "^5.0.14",
+    "@wagmi/core": "^2.6.9",
+    "@xmtp/react-sdk": "^7.0.0",
+    "@xmtp/xmtp-js": "^11.5.0",
     "autoprefixer": "^10.4.17",
-    "ethers": "^6.13.2",
-    "lucide-react": "^0.344.0",
-    "next": "14.2.5",
+    "ethers": "^6.13.4",
+    "framer-motion": "^11.18.2",
+    "lucide-react": "^0.294.0",
+    "next": "15.0.3",
+    "next-themes": "^0.4.3",
     "postcss": "^8.4.33",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.0.0-rc-02c0e824-20241028",
+    "react-dom": "^19.0.0-rc-02c0e824-20241028",
+    "react-hot-toast": "^2.4.1",
     "recharts": "^2.12.0",
     "tailwindcss": "^3.4.1",
-    "viem": "^2.7.15",
-    "wagmi": "^2.9.2",
+    "viem": "^2.21.48",
+    "wagmi": "^2.12.29",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "typescript": "5.5.4",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/jest-dom": "^6.4.2",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.1.1",
-  "@types/jest": "^29.5.12",
-  "jest-environment-jsdom": "^29.7.0"
+    "typescript": "5.5.4"
   }
 }
