--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 APP_ENV=local
 WEB_PORT=3000
 API_PORT=8000
-NEXT_PUBLIC_API_BASE_URL=https://8000-01k4gmg9q2k5psffk18y0q47h1.cloudspaces.litng.ai
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
 
 # Database
 POSTGRES_USER=domacross
