--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -16,7 +16,7 @@ NEXT_PUBLIC_DOMAIN_MARKETPLACE_ADDRESS=0xDc64a140Aa3E981100a9becA4E685f962f0cF6C
 NEXT_PUBLIC_DOMAIN_BASKET_ADDRESS=0x5FC8d32690cc91D4c39d9d3abcBD16989F875707
 
 # API Configuration
-NEXT_PUBLIC_API_BASE_URL=https://8000-01k4gmg9q2k5psffk18y0q47h1.cloudspaces.litng.ai
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
 
 # WalletConnect (optional)
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
