--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,6 +44,7 @@
     "@types/react-dom": "^18.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "pino-pretty": "^13.1.1",
     "ts-jest": "^29.1.1",
     "typescript": "5.5.4"
   }
