--- a/.env.example
+++ b/.env.example
@@ -17,10 +17,38 @@ REDIS_URL=redis://redis:6379/0
 # Blockchain
 DOMA_TESTNET_CHAIN_ID=97476
 DOMA_TESTNET_RPC_URL_PRIMARY=https://rpc-testnet.doma.xyz
-DOMA_TESTNET_API=https://api-testnet.doma.xyz
-DOMA_TESTNET_API_KEY=v1.your-api-key
-DOMA_TESTNET_SUBGRAPH_API=https://api-testnet.doma.xyz/graphql
+DOMA_RPC_URL_PRIMARY=https://rpc-testnet.doma.xyz
 DOMA_TESTNET_RPC_URL_FALLBACK=
+DOMA_RPC_URL_FALLBACK=
+
+# Doma Protocol Integration (REQUIRED for new features)
+# Main API and Subgraph
+DOMA_API_KEY=v1.your-api-key-here
+DOMA_SUBGRAPH_URL=https://api-testnet.doma.xyz/graphql
+
+# Doma Poll API (Real-time event indexing - 5 second polling)
+DOMA_POLL_BASE_URL=https://api-testnet.doma.xyz
+DOMA_POLL_API_KEY=v1.your-api-key-here
+
+# Doma Orderbook & Marketplace
+DOMA_ORDERBOOK_BASE_URL=https://api-testnet.doma.xyz
+DOMA_MARKETPLACE_BASE_URL=https://api-testnet.doma.xyz
+
+# Doma Fractionalization
+DOMA_FRACTIONALIZATION_CONTRACT=0x...
+ENABLE_FRACTIONAL_TOKENS=true
+
+# DomaRank AI Oracle (Multi-factor domain valuation)
+ENABLE_DOMA_RANK_ORACLE=true
+DOMA_RANK_UPDATE_INTERVAL_SECONDS=600
+
+# Background Services (Enable for production)
+ENABLE_BACKGROUND_POLLING=true
+ENABLE_ORDERBOOK_SNAPSHOTS=true
+ENABLE_NAV_CALCULATIONS=true
+ENABLE_RECONCILIATION=false
+ENABLE_BACKFILL_SERVICE=false
+ENABLE_MERKLE_SERVICE=false
 
 # Auth (RS256). Provide base64-encoded PEMs
 JWT_PRIVATE_KEY_BASE64=
@@ -32,14 +60,14 @@ JWT_TTL_SECONDS=3600
 # External APIs
 ALCHEMY_API_KEY=
 
-# Doma Poll API
-DOMA_POLL_BASE_URL=
-DOMA_POLL_API_KEY=
-DOMA_ORDERBOOK_BASE_URL=
-DOMA_MARKETPLACE_BASE_URL=
-DOMA_SUBGRAPH_URL=
+# Valuation
 VALUATION_MODEL_VERSION=v1.0
-NEXT_PUBLIC_ORDERBOOK_API_BASE=
+
+# Frontend
+NEXT_PUBLIC_API_URL=http://localhost:8001
+NEXT_PUBLIC_DOMA_API_URL=https://api-testnet.doma.xyz
+NEXT_PUBLIC_DOMA_API_KEY=v1.your-api-key-here
+NEXT_PUBLIC_ORDERBOOK_API_BASE=https://api-testnet.doma.xyz
 
 # Admin wallets (JSON array of addresses). Example: ["0xabc...","0xdef..."]
 ADMIN_WALLETS=[]
