--- a/.env.example
+++ b/.env.example
@@ -71,3 +71,4 @@ NEXT_PUBLIC_ORDERBOOK_API_BASE=https://api-testnet.doma.xyz
 
 # Admin wallets (JSON array of addresses). Example: ["0xabc...","0xdef..."]
 ADMIN_WALLETS=[]
+USE_CELERY=true
