--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -18,6 +18,10 @@ NEXT_PUBLIC_DOMAIN_BASKET_ADDRESS=0x5FC8d32690cc91D4c39d9d3abcBD16989F875707
 # API Configuration
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
 
+# Doma Protocol API Configuration
+NEXT_PUBLIC_DOMA_API_URL=https://api-testnet.doma.xyz
+NEXT_PUBLIC_DOMA_API_KEY=your-doma-api-key-here
+
 # WalletConnect (optional)
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
 
